# doosan-robot2

./: README.md  start_emulator.sh
common2/: CMakeLists.txt
common2/imp/: DSR_ROBOT2.py
dsr_bringup2/: CMakeLists.txt  package.xml  setup.py
dsr_bringup2/dsr_bringup2/: connection.py  gazebo_connection.py  moveit_connection.py
dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py  dsr_bringup2_rviz.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py
dsr_controller2/: CMakeLists.txt  package.xml
dsr_controller2/config/: dsr_controller2.yaml  dsr_controller2_gz.yaml
dsr_controller2/launch/: dsr_controller2.launch.py
dsr_controller2/src/: dsr_controller2.cpp
dsr_description2/: CMakeLists.txt
dsr_description2/config/: macro.gazebo.xacro
dsr_description2/ros2_control/: a0509.ros2_control.xacro  a0912.ros2_control.xacro  e0509.ros2_control.xacro  h2017.ros2_control.xacro  h2515.gz_ros2_control.xacro  h2515.ros2_control.xacro  m0609.gz_ros2_control.xacro  m0609.ros2_control.xacro  m0617.gz_ros2_control.xacro  m0617.ros2_control.xacro  m1013.gz_ros2_control.xacro  m1013.ros2_control.xacro  m1509.gz_ros2_control.xacro  m1509.ros2_control.xacro
dsr_description2/rviz/: default.rviz
dsr_description2/urdf/: h2017.white.urdf
dsr_description2/xacro/: a0509.urdf.xacro  a0912.urdf.xacro  e0509.urdf.xacro  h2017.urdf.xacro  h2515.urdf.xacro  m0609.urdf.xacro  m0617.urdf.xacro  m1013.urdf.xacro  m1509.urdf.xacro  macro.a0509.blue.xacro  macro.a0509.white.xacro  macro.a0912.blue.xacro  macro.a0912.white.xacro  macro.e0509.white.xacro  macro.h2017.blue.xacro  macro.h2017.white.xacro  macro.h2515.blue.xacro  macro.h2515.white.xacro  macro.m0609.blue.xacro  macro.m0609.white.xacro  macro.m0617.blue.xacro  macro.m0617.white.xacro  macro.m1013.blue.xacro  macro.m1013.white.xacro  macro.m1509.blue.xacro  macro.m1509.white.xacro
dsr_example2/dsr_visualservoing_ex-master/: package.xml  setup.cfg  setup.py
dsr_example2/example/: README.md
dsr_example2/realtime_control/: README.md  package.xml
dsr_example2/visualservoing/: README.md  package.xml  setup.py
dsr_gazebo2/: package.xml
dsr_gazebo2/launch/: dsr_gazebo.launch.py  dsr_spawn_on_gazebo.launch.py
dsr_hardware2/: CMakeLists.txt  package.xml
dsr_hardware2/dsr_hardware2/: test.py
dsr_msgs2/: CMakeLists.txt
dsr_realtime_control/: CMakeLists.txt  package.xml
dsr_realtime_control/include/dsr_realtime_control/: client_n_publish.hpp  client_to_publish.hpp  realtime_control.hpp  rt_api_test.hpp
dsr_realtime_control/src/: client_n_publish.cpp  client_to_publish.cpp  realtime_control.cpp  rt_api_test.cpp
(+22 files in other folders)
